syntax = "proto3";
package mapeo;

import "common/v1.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "options.proto";
import "tags/v1.proto";
import "versionId/v1.proto";

message Observation_1 {
  // **DO NOT CHANGE dataTypeId** generated with `openssl rand -hex 6`
  option (dataTypeId) = "31d090df2e16";
  option (schemaName) = "observation";

  Common_1 common = 1;

  optional double lat = 5;
  optional double lon = 6;

  // ATTACHMENT
  enum AttachmentType {
    attachment_type_unspecified = 0;
    photo = 1;
    video = 2;
    audio = 3;
  }
  message Exif {
    optional double ApertureValue = 1;
    optional string DateTime = 2;
    optional double ExposureTime = 3;
    optional double Flash = 4;
    optional double FocalLength = 5;
    optional double GPSAltitude = 6;
    optional double GPSAltitudeRef = 7;
    optional string GPSDateStamp = 8;
    optional double GPSLatitude = 9;
    optional string GPSLatitudeRef = 10;
    optional double GPSLongitude = 11;
    optional string GPSLongitudeRef = 12;
    optional string GPSTimeStamp = 13;
    optional double ISOSpeedRatings = 14;
    optional double ImageLength = 15;
    optional double ImageWidth = 16;
    optional string Make = 17;
    optional string Model = 18;
    optional double Orientation = 19;
    optional double ShutterSpeedValue = 20;
  }
  message Attachment {
    bytes driveDiscoveryId = 1 [(required) = true];
    string name = 2 [(required) = true];
    AttachmentType type = 3;
    bytes hash = 4;
    optional Exif exif = 5;
  }
  repeated Attachment attachments = 7;

  // TAGS
  map<string, TagValue_1> tags = 8;

  // METADATA
  message Metadata {
    optional bool manualLocation = 1;

    message Position {
      google.protobuf.Timestamp timestamp = 1;
      optional bool mocked = 2;

      message Coords {
        double latitude = 1;
        double longitude = 2;
        optional double altitude = 3;
        optional double heading = 4;
        optional double speed = 5;
        optional double accuracy = 6;
        optional double altitudeAccuracy = 7;
      }
      optional Coords coords = 3;
    }

    message PositionProvider {
      optional bool gpsAvailable = 1;
      optional bool passiveAvailable = 2;
      bool locationServicesEnabled = 3;
      optional bool networkAvailable = 4;
    }

    optional Position position = 3;
    optional Position lastSavedPosition = 4;
    optional PositionProvider positionProvider = 5;
  }
  optional Metadata metadata = 9;

  optional PresetRef presetRef = 10;

  message PresetRef {
    bytes docId = 1;
    VersionId_1 versionId = 2;
  }
}
